- eladási és adminsztrációs eseményeknek közös ősosztály (InventoryEvent), hogy lehessen majd továbbítani azokat több gép között - újabb JavaFX bugos Raspberry Pi-n, scene váltást nem tudja, ezért a bejelentkezés után új scene helyett csak a réginek a root node-ját cseréjük. Nem nagy baj, mert legalább gyorsabban tölt be, ~25 mp helyett 'csak' 11 másodperc alatt.