@@ -6,14 +6,19 @@ plugins {
 group 'net.hontvari'
 
 compileJava {
-    sourceCompatibility = "11"
-    targetCompatibility = "11"
+    sourceCompatibility = "17"
+    targetCompatibility = "17"
 }
 
 mainClassName = "arunyilvantarto.Main2"
 
 tasks.withType(JavaCompile) {
     options.encoding = 'UTF-8'
+    options.compilerArgs.add("--enable-preview")
+}
+
+run {
+    jvmArgs(['--enable-preview'])
 }
 
 applicationDefaultJvmArgs = [
@@ -36,13 +41,13 @@ repositories {
 }
 
 dependencies {
-    compile "com.miglayout:miglayout-javafx:11.0"
-    compile "org.controlsfx:controlsfx:11.1.0"
-    compile "com.fasterxml.jackson.core:jackson-databind:2.12.3"
-    compile "com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.12.3"
-    compile "org.openjfx:javafx-base:11.0.2:win"
-    compile "org.openjfx:javafx-graphics:11.0.2:win"
-    compile "org.openjfx:javafx-controls:11.0.2:win"
-    compile "org.checkerframework:checker-qual:3.18.0"
-    testCompile group: 'junit', name: 'junit', version: '4.12'
+    implementation "com.miglayout:miglayout-javafx:11.0"
+    implementation "org.controlsfx:controlsfx:11.1.0"
+    implementation "com.fasterxml.jackson.core:jackson-databind:2.12.3"
+    implementation "com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.12.3"
+    implementation "org.openjfx:javafx-base:11.0.2:win"
+    implementation "org.openjfx:javafx-graphics:11.0.2:win"
+    implementation "org.openjfx:javafx-controls:11.0.2:win"
+    implementation "org.checkerframework:checker-qual:3.18.0"
+    testImplementation group: 'junit', name: 'junit', version: '4.12'
 }
